--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -25,10 +25,12 @@
         </init-param>
     </filter>
   
+ 
   <context-param>
     <param-name>contextConfigLocation</param-name>
     <param-value>
-			/WEB-INF/dispatcher-servlet.xml
+			/WEB-INF/dispatcher-servlet.xml,
+			/WEB-INF/spring/root-context.xml
 		</param-value>
   </context-param>
   <listener>
