--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -30,7 +30,8 @@
     <param-name>contextConfigLocation</param-name>
     <param-value>
 			/WEB-INF/dispatcher-servlet.xml,
-			/WEB-INF/spring/root-context.xml
+			/WEB-INF/spring/root-context.xml,
+			/WEB-INF/spring/application-security.xml
 		</param-value>
   </context-param>
   <listener>
@@ -38,4 +39,13 @@
 	    	org.springframework.web.context.ContextLoaderListener
 	  	</listener-class>
   </listener>
+  <filter>
+		<filter-name>springSecurityFilterChain</filter-name>
+		<filter-class>org.springframework.web.filter.DelegatingFilterProxy</filter-class>
+	</filter>
+
+	<filter-mapping>
+		<filter-name>springSecurityFilterChain</filter-name>
+		<url-pattern>/*</url-pattern>
+	</filter-mapping>
 </web-app>
